[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/control/mainMenu.gd" type="Script" id=2]

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -256.0
margin_bottom = -150.0
size_flags_horizontal = 7
size_flags_vertical = 7
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="mainScreen" type="Panel" parent="."]
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 15
size_flags_vertical = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainLabel" type="Label" parent="mainScreen"]
margin_left = 128.0
margin_top = 64.0
margin_right = 384.0
margin_bottom = 192.0
size_flags_horizontal = 15
size_flags_vertical = 15
text = "oh no how did this get here"
align = 1

[node name="startScreen" type="ReferenceRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
rect_min_size = Vector2( 512, 300 )
size_flags_horizontal = 7
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keytimer" type="Timer" parent="startScreen"]
wait_time = 2.0
autostart = true

[node name="startBackground" type="Panel" parent="startScreen"]
margin_right = 512.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startPressPlay" type="Label" parent="startScreen/startBackground"]
margin_left = 128.0
margin_top = 192.0
margin_right = 384.0
margin_bottom = 232.0
text = "Press \"A\" to Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startTitleText" type="Label" parent="startScreen/startBackground"]
margin_left = 128.0
margin_top = 32.0
margin_right = 384.0
margin_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
text = "OUT OF CONTROL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
